--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "jotai": "^2.13.1",
     "lucide-react": "^0.542.0",
     "react": "^19.1.0",
