--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@codemirror/lang-markdown": "^6.3.4",
+    "@codemirror/theme-one-dark": "^6.1.3",
     "@tailwindcss/vite": "^4.1.12",
     "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-dialog": "^2.3.3",
+    "@tauri-apps/plugin-fs": "^2.4.2",
     "@tauri-apps/plugin-opener": "^2",
     "clsx": "^2.1.1",
+    "codemirror": "^6.0.2",
     "framer-motion": "^12.23.12",
     "jotai": "^2.13.1",
     "lucide-react": "^0.542.0",
